# SpaceInvaders

./: Bullet.qml  CMakeLists.txt  EndScreen.qml  Enemy.qml  Game.qml  MVCEnemy.qml  Main.qml  MainController.qml  Menu.qml  MenuController.qml  Parameters.qml  README.md  gamedata.cpp  gamedata.h  main.cpp
